<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <TextView
                android:id="@+id/text_alert"
                android:text="@string/sure_text"
                android:layout_centerHorizontal="true"
                android:padding="10dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/conf_no_but"
                android:text="@string/no"
                android:layout_alignParentEnd="true"
                android:layout_margin="45dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/conf_yes_but"
                android:text="@string/yes"
                android:layout_margin="45dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>